<resources>
    <string name="facebook_application_id" translatable="false">597067395685611</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb597067395685611</string>
    <string name="facebook_client_token" translatable="false">ce047cac8312eb61373184b48a06bf8d</string>

    <string name="app_name">Go4Lunch</string>

    <string name="main_activity_description">Un petit repas entre collègues ? Go4Lunch !</string>

    <string name="login">Connexion</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Rappel"</string>

    <!-- CONNECTION ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom de l\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour mon profil</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>

    <!-- MAIN ACTIVITY -->
    <string name="map_view">Carte</string>
    <string name="list_view">Liste</string>
    <string name="workmates">Collègues</string>
    <string name="restaurant_picture">Image du restaurant : %s</string>
    <string name="call">APPELER</string>
    <string name="like">J\'AIME</string>
    <string name="website_button">SITE WEB</string>

    <!-- MAPS FRAGMENT -->
    <string name="title_activity_maps">Détails</string>
    <string name="default_info_title">Endroit par défaut</string>
    <string name="default_info_snippet">La localisation est désactivée.</string>
    <string name="option_get_place">Endroit trouvé</string>
    <string name="pick_place">Choisissez un endroit</string>
    <string name="avatar">avatar</string>
    <string name="closed">Fermé</string>
    <string name="open">Ouvert</string>
    <string name="no_gps_signal">Pas de signal GPS</string>
    <string name="lunch">VOTRE RESTAURANT</string>
    <string name="settings">PARAMETRES</string>
    <string name="logout">DECONNEXION</string>
    <string name="open_nav">Ouvert</string>
    <string name="close_nav">Fermé</string>
    <string name="avatar_picture">Photo</string>
    <string name="go_to_this_restaurant">Aller dans ce restaurant</string>
    <string name="illustrative_picture">Photo d\'illustration</string>
    <string name="picture_of_the_restaurant">Photo du restaurant</string>
    <string name="email_address">Adresse Email</string>
    <string name="profile_image">Photo du profil</string>
    <string name="refused_permission">Permission refusée</string>
    <string name="error_delete_account">Erreur lors de la suppression de votre compte</string>
    <string name="nom">Nom</string>
    <string name="email">Adresse Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="deleted_account">Votre profil a été supprimé</string>
    <string name="picture_has_changed">Votre photo de profil a été changée</string>
    <string name="network_error">Vérifiez votre connexion internet</string>
    <string name="username_error">Nom d\'utilisateur incorrect</string>
    <string name="email_error">Adresse mail incorrect</string>
    <string name="password_error">Mot de passe incorrect</string>
    <string name="password">Mot de passe</string>
    <string name="username_updated">Votre nom d\'utilisateur a été changé</string>

    <!-- GPS FRAGMENT -->
    <string name="gps_network_not_enabled">Votre GPS semble être désactivé, voulez-vous l\'activer ?</string>
    <string name="enable_gps">Activer GPS</string>
    <string name="open_location_settings">Ouvrir les paramètres de localisation</string>
    <string name="cancel">Annuler</string>
    <string name="annuler">Annuler</string>
    <string name="activer">Activer</string>
    <string name="gps_off">Le GPS est désactivé</string>
    <string name="please_activate_gps">Pour faire fonctionner cette application avec toutes ses fonctionnalités, nous avons besoin que vous activiez votre Gps avec la localisation précise.
        \nNe vous inquiètez pas, nous ne collectons aucune de vos données.</string>
    <string name="is_eating_at">%s mange au %s</string>
    <string name="is_joining">%s y va!</string>
    <string name="hasnt_decided_yet">%s ne s\'est pas encore décidé</string>
    <string name="yes">OUI</string>
    <string name="exit">Appuyez encore sur retour pour quitter</string>
    <string name="hasnt_decided_yet_in_string">ne s\'est pas encore décidé</string>
    <string name="no_restaurant_selected">Pas de restaurant sélectionné</string>
    <string name="your_position">Vous êtes ici !</string>
    <string name="search_restaurants">Rechercher un restaurant</string>
    <string name="im_hungry">J\'ai Faim!</string>
    <string name="back_button">Boutton retour</string>
    <string name="notification_container">"Vous mangez au %s, %s avec %s "</string>
    <string name="notifications">Activer ou désactiver les notifications</string>
    <string name="on">Non</string>
    <string name="off">Oui</string>
    <string name="no_network">Pas de connexion internet</string>
    <string name="unknown_error">Erreur inconnue</string>
    <string name="invalid_credentials">Connexion impossible</string>
    <string name="no_restaurant_found">Aucun restaurant trouvé</string>
</resources>