<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- PROFILE IMAGE -->
    <ImageView
        android:id="@+id/profileImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/default_large_margin"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_anon_user_48dp" />

    <!-- PROFILE USERNAME -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/text_input_username"
        android:inputType="textPersonName"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageButton" />

    <!-- EMAIL ADDRESS -->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <!-- SEPARATOR -->
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <!-- BUTTON NOTIFICATIONS -->
    <Button
        android:id="@+id/notificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@drawable/button_radius_primary_color"
        android:padding="@dimen/default_margin"
        android:text="@string/notifications"
        android:textColor="#fff"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <!-- BUTTON UPDATE USERNAME -->
    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@drawable/button_radius_primary_color"
        android:padding="@dimen/default_margin"
        android:text="@string/button_update_account"
        android:textColor="#fff"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- BUTTON DELETE ACCOUNT -->
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@drawable/button_radius_accent_color"
        android:padding="@dimen/default_margin"
        android:text="@string/button_delete_account"
        android:textColor="#fff"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
